0.03
 - Add minimal version of Perl.
 - Remove diacritics from author name.

0.02 2014-10-13T11:19:30+02:00
 - Add LICENSE file.

0.01 2014-09-03T13:56:45+02:00
 - First version.