@@ -1,6 +1,7 @@
 0.03
  - Add minimal version of Perl.
  - Remove diacritics from author name.
+ - Update Module::Install to 1.16 version.
 
 0.02 2014-10-13T11:19:30+02:00
  - Add LICENSE file.
